--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Crystal Chum</strong><br>
-					Welcome to my site <br>
-					please stay a while</h1>
+					<h1><strong>Hi! I'm Crystal.</strong> Welcome<br>
+					to my profile. </h1>
 				</div>
 			</header>
 
